--- a/app/src/main/res/layout/view_myscript_pad.xml
+++ b/app/src/main/res/layout/view_myscript_pad.xml
@@ -114,6 +114,16 @@
         app:layout_constraintTop_toBottomOf="@+id/pen_switch" />
 
     <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/convert_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Convert"
+        android:checked="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/eraser_switch" />
+
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/pen_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
