--- a/myscript-iink/src/main/res/layout/view_myscript.xml
+++ b/myscript-iink/src/main/res/layout/view_myscript.xml
@@ -8,4 +8,9 @@
 
     <include layout="@layout/editor_view" />
 
+    <com.knowre.android.myscript.iink.view.CandidateView
+        android:id="@+id/candidate_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
