--- a/app/src/main/res/layout/view_myscript_pad.xml
+++ b/app/src/main/res/layout/view_myscript_pad.xml
@@ -1,52 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.knowre.android.myscript.iink.view.MyScriptView
-        android:id="@+id/my_script"
+        android:id="@+id/my_script_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#11333345"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.knowre.android.myscript.iink.view.StrokeSelectionView
+        android:id="@+id/stroke_selection"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/delete_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="DELETE ALL"
+        android:text="DELETE_ALL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/convert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
         android:text="convert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@id/delete_all"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/delete_all" />
+
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/digit_only_grammar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
         android:text="n_digit_only"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@id/convert"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/delete_all" />
+
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/default_grammar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
         android:text="default"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@id/digit_only_grammar"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/delete_all" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,6 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/delete_all" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,6 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/delete_all" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,6 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/delete_all" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/redo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -83,6 +104,7 @@
         app:layout_constraintTop_toBottomOf="@+id/delete_all" />
 
     <Button
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:id="@+id/undo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -92,16 +114,14 @@
         app:layout_constraintEnd_toStartOf="@id/redo"
         app:layout_constraintTop_toBottomOf="@+id/delete_all" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/latex"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:gravity="left"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.SwitchCompat
@@ -118,8 +138,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Convert"
         android:checked="false"
+        android:text="Convert"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eraser_switch" />
 
@@ -139,6 +159,6 @@
         android:layout_margin="10dp"
         android:text="Pen"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/delete_all" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
