Update: 후보군 리스트 리싸이클러뷰를 mysciprt 모듈이 아닌 외부 app 모듈에 위치하도록 수정

--- a/app/src/main/res/layout/view_myscript_pad.xml
+++ b/app/src/main/res/layout/view_myscript_pad.xml
@@ -161,4 +161,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/delete_all" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/candidate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
